2019-07-22  Eric Botcazou  <ebotcazou@adacore.com>

	* sem_ch8.adb (Check_Constrained_Object): Further extend the
	special optimization to all limited types.

2019-07-22  Eric Botcazou  <ebotcazou@adacore.com>

	* exp_attr.adb (Expand_N_Attribute_Reference)
	<Attribute_Enum_Val>: Set No_Truncation on the
	N_Unchecked_Type_Conversion built around the argument passed to
	the attribute.

2019-07-22  Nicolas Roche  <roche@adacore.com>

	* libgnat/s-valrea.adb (Scan_Real): Ignore non significative
	digits to avoid converging to infinity in some cases.

2019-07-22  Eric Botcazou  <ebotcazou@adacore.com>

	* libgnat/g-encstr.adb (Encode_Wide_String): Fix oversight.
	(Encode_Wide_Wide_String): Likewise.

2019-07-22  Eric Botcazou  <ebotcazou@adacore.com>

	* sem_warn.adb (Find_Var): Bail out for a function call with an
	Out or In/Out parameter.

2019-07-22  Nicolas Roche  <roche@adacore.com>

	* terminals.c (__gnat_tty_waitpid): Support both blocking and
	not blocking mode.
	* libgnat/g-exptty.ads (Is_Process_Running): New function.
	* libgnat/g-exptty.adb (Close): Don't try to interrupt/terminate
	a process if it is already dead.

2019-07-22  Ed Schonberg  <schonberg@adacore.com>

	* freeze.adb (Freeze_Fixed_Point_Type):  When freezing a
	fixed-point subtype, check whether the parent type declarastion
	includes an aspect specification for the 'Small type attribute,
	and inherit the specified value.

2019-07-22  Javier Miranda  <miranda@adacore.com>

	* freeze.adb (Freeze_Subprogram): Check that C++ constructors
	must have external or link name.

2019-07-22  Ed Schonberg  <schonberg@adacore.com>

	* sem_res.adb (Resolve_Selected_Component): If the prefix has a
	deferred reference, generate the correct reference now, to
	indicate that the previous assignment is used.  This prevents
	spurious warnings on useless assignments when compiling with all
	warnings enabled. when there is a subsequent call in the same
	stqtement list, in which the prefix of the selected component is