@@ -1,3 +1,10 @@
+2019-07-22  Gary Dismukes  <dismukes@adacore.com>
+
+	* exp_ch5.adb (Expand_N_Case_Statement): In the case where a
+	case statement is rewritten as an equivalent if statement,
+	inherit the From_Condition_Expression flag from the case
+	statement.
+
 2019-07-22  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* sem_ch8.adb (Check_Constrained_Object): Further extend the
